Use markdown for zones; betray my mother tongue.

--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "clean": "gatsby clean",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
-  "license": "GAGPL",
+  "license": "GNU Affero GPL",
   "dependencies": {
     "gatsby": "^2.26.1",
     "gatsby-source-filesystem": "^2.8.0",
     "gatsby-transformer-csv": "^2.7.0",
-    "gatsby-transformer-json": "^2.8.0",
+    "gatsby-transformer-remark": "^2.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
