--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "license": "GNU Affero GPL",
   "dependencies": {
+    "fontsource-merriweather": "^4.0.0",
+    "fontsource-montserrat": "^4.0.0",
     "gatsby": "^2.26.1",
     "gatsby-source-filesystem": "^2.8.0",
     "gatsby-transformer-csv": "^2.7.0",
