--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fontsource-merriweather": "^4.0.0",
     "fontsource-montserrat": "^4.0.0",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-google-analytics": "^2.8.0",
     "gatsby-plugin-google-tagmanager": "^2.8.0",
     "gatsby-source-filesystem": "^2.8.0",
     "gatsby-transformer-csv": "^2.7.0",
