--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gatsby-transformer-csv": "^2.7.0",
     "gatsby-transformer-remark": "^2.13.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-simple-maps": "^2.3.0"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
