Disable Google Analytics and avoid cookie banners.

--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "fontsource-merriweather": "^4.0.0",
     "fontsource-montserrat": "^4.0.0",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-gdpr-cookies": "^1.0.11",
     "gatsby-plugin-google-analytics": "^2.8.0",
     "gatsby-plugin-google-tagmanager": "^2.8.0",
     "gatsby-source-filesystem": "^2.8.0",
     "gatsby-transformer-csv": "^2.7.0",
     "gatsby-transformer-remark": "^2.13.0",
     "react": "^16.13.1",
+    "react-cookie-consent": "^6.2.1",
     "react-dom": "^16.13.1",
     "react-simple-maps": "^2.3.0"
   },
