--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "license": "GNU Affero GPL",
   "dependencies": {
+    "d3": "^6.3.1",
     "fontsource-merriweather": "^4.0.0",
     "fontsource-montserrat": "^4.0.0",
     "gatsby": "^2.26.1",
@@ -24,7 +25,8 @@
     "gatsby-transformer-remark": "^2.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-simple-maps": "^2.3.0"
+    "react-simple-maps": "^2.3.0",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
