--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "fontsource-merriweather": "^4.0.0",
     "fontsource-montserrat": "^4.0.0",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-source-filesystem": "^2.8.0",
     "gatsby-transformer-csv": "^2.7.0",
     "gatsby-transformer-remark": "^2.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-simple-maps": "^2.3.0",
     "topojson-client": "^3.1.0"
   },
