--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fontsource-merriweather": "^4.0.0",
     "fontsource-montserrat": "^4.0.0",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-manifest": "^2.9.1",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-source-filesystem": "^2.8.0",
     "gatsby-transformer-csv": "^2.7.0",
