--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-transformer-csv": "^2.7.0",
     "gatsby-transformer-remark": "^2.13.0",
     "react": "^16.13.1",
+    "react-calendar": "^3.2.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-simple-maps": "^2.3.0",
