--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "oggiposso",
+  "name": "Oggi posso",
   "version": "1.0.0",
   "private": true,
-  "description": "oggiposso",
+  "description": "Le regole COVID-19 per regione.",
+  "author": "Marco Molinari <marco.molinari@gmail.com>",
   "keywords": [
     "gatsby"
   ],
@@ -18,8 +19,6 @@
   "dependencies": {
     "autoprefixer": "^10.1.0",
     "d3": "^6.3.1",
-    "fontsource-merriweather": "^4.0.0",
-    "fontsource-montserrat": "^4.0.0",
     "gatsby": "^2.26.1",
     "gatsby-plugin-manifest": "^2.9.1",
     "gatsby-plugin-postcss": "^3.4.0",
@@ -36,7 +35,15 @@
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.2.1",
     "gh-pages": "^3.1.0",
     "tailwindcss": "^2.0.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mmolinari/oggiposso"
+  },
+  "bugs": {
+    "url": "https://github.com/mmolinari/oggiposso/issues"
   }
 }
