--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-manifest": "^2.9.1",
     "gatsby-plugin-postcss": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-remark-classes": "^1.0.0",
     "gatsby-source-filesystem": "^2.8.0",
     "gatsby-transformer-csv": "^2.7.0",
     "gatsby-transformer-remark": "^2.13.0",
