--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Oggi posso",
+  "name": "oggi_posso",
   "version": "1.0.0",
   "private": true,
   "description": "Le regole COVID-19 per regione.",
