--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "license": "GNU Affero GPL",
   "dependencies": {
+    "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.2.1",
     "d3": "^6.3.1",
     "gatsby": "^2.30.1",
