--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "license": "GNU Affero GPL",
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.1.0",
     "d3": "^6.3.1",
     "gatsby": "^2.26.1",
